--- a/package.json
+++ b/package.json
@@ -8,7 +8,24 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "sqlite": "^5.1.6",
-    "sqlite3": "^5.1.7"
-  }
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/i7chernousov/react-shop-nodejs.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/i7chernousov/react-shop-nodejs/issues"
+  },
+  "homepage": "https://github.com/i7chernousov/react-shop-nodejs#readme",
+  "description": ""
 }
